# aetherlight

./: .gitignore  Cargo.toml  Dockerfile  aether-package.json  package-lock.json  package.json  root.json  tsconfig.json
assets/models/: portal.gltf  small_rock.glb
assets/models/player/: player.gltf
assets/shaders/: bloom_downsample.wgsl  bloom_pre_filter.wgsl  bloom_upsample.wgsl  cubemap.wgsl  functions.wgsl  panorama_to_cubemap.wgsl  punctual.wgsl  tone_mapping.wgsl
assets/terrain/: dirt.json  grass.json  rock.json  water.json
assets/world/: terrain.json
crates/server/: Cargo.toml
js/: quat.ts  vec2.ts  vec3.ts
project/: client_root.json
project/assets/shaders/: animation.wgsl  brdf.wgsl  fullscreen.wgsl  ibl.wgsl  ibl_filtering.wgsl  material_info.wgsl  pbr.wgsl  primitive.wgsl
project/assets/terrain/: sand.json
project/scripts/src/: client.ts  player.ts  shared_sim.d.ts
project/world/: terrain.json
scripts/: run-shard.sh  run-web.sh
scripts/src/: client.ts
src/: camera.ts  client.ts  player.ts
