[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.93"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
glam = { version = "0.29.2", features = ["mint", "bytemuck", "serde"] }
bytemuck = { version = "1.20.0", features = ["extern_crate_alloc", "derive"] }
thiserror = "2.0.3"
futures = "0.3.31"
clap = { version = "4.5.21", features = ["derive"] }
itertools = "0.13.0"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.72", features = [
    "WebGl2RenderingContext",
    "HtmlCanvasElement",
    "Response",
    "RtcDataChannel",
    "RtcDataChannelInit",
    "RtcDataChannelState",
    "RtcDataChannelType",
    "RtcIceCandidateInit",
    "RtcPeerConnection",
    "RtcSdpType",
    "RtcSessionDescriptionInit",
    "RtcSessionDescription",
    "Performance",
    "KeyboardEvent",
    "MouseEvent",
    "WebGl2RenderingContext",
    "MessageChannel",
    "MessagePort",
    "RtcIceConnectionState",
] }
js-sys = "0.3.77"
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
image = "0.25.5"
glow = "0.16.0"
wgpu = "25.0"
naga = "25.0"
gltf = "1.4.1"
hyper = { version = "1.5.1", features = ["server", "http1", "client"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }
reqwest = { version = "0.12.9", default-features = false, features = [
    "json",
    "blocking",
    "rustls-tls",
] }
futures-util = "0.3.31"
http-body-util = "0.1.2"
serde_json = "1.0.133"
bincode = "1.3.3"
bytes = "1.8.0"
base64 = "0.22.1"
sha2 = "0.10.8"
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
hmac = "0.12.1"
chrono = { version = "0.4.41", features = ["serde"] }
hecs = "0.10.5"
rapier3d = { version = "0.26.1", features = ["debug-render"] }
nanorand = { version = "0.7", features = ["getrandom"] }
rand = { version = "0.8.5", features = ["small_rng"] }
palette = { version = "0.7.6", features = ["serializing"] }
deno_core = "0.344.0"
deno_error = "0.5.6"
swc_core = { version = "34.0", features = [
    "ecma_transforms_typescript",
    "ecma_parser",
    "ecma_visit",
    "common",
] }
swc_ecma_ast = "14.0"
swc_ecma_codegen = "16.0"
swc_ecma_parser = "22.0"
swc_ecma_transforms_base = "23.0"
swc_ecma_transforms_typescript = "25.0"
swc_ecma_visit = "14.0"
swc_common = "14.0"
tokio-util = { version = "0.7.12", features = ["io", "codec", "compat"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2"
async-channel = "2.3.1"
once_cell = "1.20.2"
bitflags = "2.6.0"
enumflags2 = "0.7.10"
derive_more = { version = "1.0.0", features = ["from", "try_into"] }
tsify = "0.4.5"
wasm-bindgen-futures = "0.4.45"
serde-wasm-bindgen = "0.6.5"
url = { version = "2.5.4", features = ["serde"] }
mime = "0.3.17"
half = { version = "2.4.1", features = ["bytemuck", "serde"] }
num = { version = "0.4.3" }
rustc-hash = "2.1.0"
openssl = "0.10"
notify = "8.0.0"
rayon = "1.10.0"
sha1 = "0.10.6"
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0.92"
turbulence = { git = "https://github.com/kyren/turbulence.git" }
webrtc-unreliable = { version = "0.6.0", features = ["tokio"] }
crossbeam = "0.8.4"
async-tungstenite = "0.28.0"
tungstenite = "0.24.0"
prometheus = "0.13.4"
arrayvec = { version = "0.7.6", features = ["serde"] }
pin-project = "1.1.7"
pin = "0.2.9"
bcrypt-pbkdf = "0.10.0"
tokio-stream = { version = "0.1.16", features = ["net"] }
hyper-tls = "0.5"
async-native-tls = "0.5.0"
num-traits = "0.2.19"
dolly = "0.6.0"
noise = "0.9.0"
strum = "0.27.1"
strum_macros = "0.27.1"
crevice = "0.18.0"
sdl2 = { version = "0.37", features = ["raw-window-handle"] }
hibitset = "0.6.4"
tokio-retry = "0.3.0"
atomic_refcell = "*"
num-derive = "0.4.2"
include_dir = "0.7.4"
ctrlc = "3.4.7"
gloo = "0.11"
wgpp = { git = "https://github.com/kyren/weegeeprepro.git" }
ddsfile = "0.5.2"
ktx2 = "0.3.0"
mime_guess = "2.0.5"
pnet = "0.35.0"
schemars = "0.8.0"
kube = { version = "1.1.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.25", features = ["v1_33"] }
serde_yaml = "0.9.34"
byteorder = "1.5.0"
webbrowser = "0.8.15"
urlencoding = "2.1.3"
percent-encoding = "2.3.1"
tiny_http = "0.12"
dirs = "5.0.1"

# Internal path dependencies
asset-server = { path = "crates/asset-server" }
assets = { path = "crates/assets" }
assets-derive = { path = "crates/assets-derive" }
client = { path = "crates/client" }
client-bin = { path = "crates/client-bin" }
client-web = { path = "crates/client-web" }
db = { path = "crates/db" }
deno-runtime = { path = "crates/deno-runtime" }
http-server = { path = "crates/http-server" }
net-components = { path = "crates/net-components" }
net-runtime = { path = "crates/net-runtime" }
net-types = { path = "crates/net-types" }
net-util = { path = "crates/net-util" }
operator = { path = "crates/operator" }
script-sandbox = { path = "crates/script-sandbox" }
aether = { path = "crates/server" }
shard-protocol = { path = "crates/shard-protocol" }
shard-server = { path = "crates/shard-server" }
shared-sim = { path = "crates/shared-sim" }
utils = { path = "crates/utils" }
nexus = { path = "crates/nexus" }

# Makes assets serialization fast in debug
[profile.dev.package.asset-server]
opt-level = 3

[profile.dev.package.assets]
opt-level = 3
