[package]
name = "aether"
version.workspace = true
edition.workspace = true

[features]
# Feature to include the aggregated `run` command and embedded web assets (web/out).
# Enabled by default for current behavior. Disable with `--no-default-features` to
# build without embedding the web root and without the `run` subcommand.
default = ["local-run"]
local-run = []

[dependencies]
bytes.workspace = true
clap.workspace = true
futures.workspace = true
futures-util.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
mime.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
serde_json.workspace = true
sha1.workspace = true
http-server.workspace = true
asset-server.workspace = true
shard-server.workspace = true
assets.workspace = true
utils.workspace = true
webrtc-unreliable.workspace = true
rand.workspace = true
rayon.workspace = true
url.workspace = true
hecs.workspace = true
db.workspace = true
base64.workspace = true
chrono.workspace = true
hmac.workspace = true
net-types.workspace = true
nexus.workspace = true
operator.workspace = true
sha2.workspace = true
shard-protocol.workspace = true
pnet.workspace = true
webbrowser.workspace = true
urlencoding.workspace = true
reqwest.workspace = true
tiny_http.workspace = true
dirs.workspace = true
include_dir.workspace = true
mime_guess.workspace = true
